--- a/src/main/webapp/views/logged/home.view.html
+++ b/src/main/webapp/views/logged/home.view.html
@@ -7,7 +7,7 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar, #navbar2" aria-expanded="false" aria-controls="navbar"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-          <a class="component-holder ng-binding ng-scope navbar-brand" data-component="crn-image" ng-click="cronapi.screen.changeView('#/home', [])"> <img alt="{{'Home.view.Home' | translate}}" src="public/assets/app-logo-login.svg" id="crn-navbar-logo" data-component="crn-image"> </a>
+          <a class="component-holder ng-binding ng-scope navbar-brand" data-component="crn-image" ng-click="cronapi.screen.changeView('#/home', [])"> <img alt="" src="public/assets/app-logo-login.svg" id="crn-navbar-logo" data-component="crn-image"> </a>
       </div>
       <div id="navbar" class="navbar-collapse collapse float-left-desktop">
         <ul class="nav navbar-nav" style="float:none">
@@ -27,8 +27,8 @@
     </div>
   </nav>
 </div>
-<div ui-view="" id="main-view" tabindex="-1" role="main" class="container-fluid main-view main-view-horizontal">
-    <h1 class="component-holder text-left h3 title">{{'Home.view.Home' | translate}}</h1>
+<div ui-view="" id="main-view" tabindex="-1" role="main" class="container-fluid main-view main-view-horizontal style9011">
+    <h1 class="component-holder text-left h3 title col-md-12">{{'Home.view.Home' | translate}}</h1><div class="component-holder ng-scope col-md-12" data-component="crn-textinput" id="crn-textinput-500410"><div class="form-group"><label for="input6762">Entrada</label> <input type="text" mask="" mask-placeholder="" ng-required="false" ng-model="vars.inputValor" class="form-control k-textbox" id="input6762" placeholder="Sua resposta aqui"></div></div><div class="component-holder ng-scope col-md-12" data-component="crn-button" id="crn-button-827223"><button class="btn k-button btn-block btn-default col-md-11" ng-click="cronapi.client('js.blockly.LogicaProgWeb.Executar').names('127c79b6').run(vars.inputValor)" xattr-fullsize="btn-block" xattr-theme="btn-default" xattr-disabled="" style=""><i class="fa fa-hand-pointer-o" icon-theme="" style="width: 2px; height: 15px;"></i> <span class="" text-theme="" style="width: 4px; height: 17px;">Executar função Servidor</span></button></div>
 </div>
 <div class="modal fade" id="modalPassword">
   <div class="modal-dialog">
